# visualapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  ruff.toml
src/visualapi/: cli.py  config.py  main.py  util.py
src/visualapi/api/: __init__.py  deps.py
src/visualapi/api/routers/: __init__.py  customer.py  customerorder.py  customerorderline.py  workorder.py
src/visualapi/api/routers/part/: __init__.py  drawing.py  part.py
src/visualapi/api/routes/: __init__.py  customer.py  customerorder.py  customerorderline.py  health.py  workorder.py
src/visualapi/api/routes/part/: __init__.py  drawing.py  part.py
src/visualapi/auth/: api.py  blacklist.py  jwt.py  signedurl.py
src/visualapi/db/: __init__.py  local.py  visual.py
src/visualapi/models/: __init__.py  currency.py  customer.py  customerorder.py  customerorderline.py  part.py  site.py  um.py  workorder.py
tests/visualapi/: conftest.py  test_util.py
